@@ -1,18 +1,17 @@
-/**
- * Created: 29.01.2020
- */
-
+// Created: 29.01.2020
 package de.freese.spring.kryo.webflux;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
 import org.springframework.http.MediaType;
 import org.springframework.util.MimeType;
+
 import com.esotericsoftware.kryo.Kryo;
 import com.esotericsoftware.kryo.util.Pool;
+
 import de.freese.spring.kryo.web.KryoHttpMessageConverter;
 
 /**
@@ -24,18 +23,15 @@ public abstract class AbstractKryoCodecSupport
      * application/x-java-object; application/x-kryo
      */
     public static final MimeType APPLICATION_KRYO = MimeType.valueOf(KryoHttpMessageConverter.APPLICATION_KRYO_VALUE);
-
     /**
      *
      */
     protected static final List<MediaType> MEDIA_TYPES =
-            Arrays.asList(APPLICATION_KRYO).stream().map(mimeType -> new MediaType(mimeType.getType(), mimeType.getSubtype())).collect(Collectors.toList());
-
+            Arrays.asList(APPLICATION_KRYO).stream().map(mimeType -> new MediaType(mimeType.getType(), mimeType.getSubtype())).toList();
     /**
      *
      */
     protected static final List<MimeType> MIME_TYPES = Collections.unmodifiableList(Arrays.asList(APPLICATION_KRYO));
-
     /**
     *
     */
@@ -63,6 +59,7 @@ public abstract class AbstractKryoCodecSupport
 
     /**
      * @param mimeType {@link MimeType}
+     *
      * @return boolean
      */
     protected boolean supportsMimeType(final MimeType mimeType)
